<?xml version="1.0"?>
<package format="2">
  <name>yolo_trt_ros</name>
  <version>0.0.0</version>
  <description>The yolo_trt_ros package</description>

  <maintainer email="e0175651@u.nus.edu">indra</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge_customized</depend>
  <depend>image_transport</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>nodelet</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>  
  <depend>message_runtime</depend>

</package>
